# image-converter

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  podman-compose.yml  problem.md  run_and_test.sh  run_local.sh  setup.sh
.github/workflows/: ci.yml  pr.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: images.py
backend/app/models/: image_models.py
backend/app/services/: image_converter.py
backend/tests/: test_image_converter.py  test_main.py
docs/: api-spec.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: App.tsx.html  index.html  index.tsx.html
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  setupTests.js  setupTests.ts
frontend/src/components/: ConversionOptions.css  ConversionOptions.tsx  ConversionProgress.css  ConversionProgress.tsx  ConversionResult.css  ConversionResult.tsx  FileUpload.css  FileUpload.tsx  ImageConverter.css  ImageConverter.tsx  ThemeToggle.css  ThemeToggle.tsx
frontend/src/components/__tests__/: ConversionOptions.test.tsx  ConversionProgress.test.tsx  (+4 more)
frontend/src/services/: imageService.ts
frontend/src/stores/: imageStore.ts  themeStore.ts
frontend/src/utils/: formatFileSize.ts
infra/: README.md
infra/helm-chart/: Chart.yaml  kkamji_values.yaml  values.yaml
infra/helm-chart/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  pdb.yaml
infra/helm-chart/values/: values.yaml
(+16 files in other folders)
